@@ -478,9 +478,7 @@ pygame.sprite.spritecollideany(sprite, group) -> sprite
        bit quicker.
        
        all sprites must have a "rect" method, which is a
-       rectangle of the sprite area. if the dokill argument
-       is true, the sprites that do collide will be
-       automatically removed from all groups.
+       rectangle of the sprite area.
 </ul><br>&nbsp;<br>
 
 
